// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box matches snapshot 1`] = `
<section
  className="container"
>
  <div
    className="content"
  >
    <div>
      Some component
    </div>
  </div>
</section>
`;

exports[`ExpandButton matches snapshot 1`] = `
<P
  Icon={
    Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
    }
  }
  className="expandIcon"
  iconSize="icon-regular"
  label=""
  onClick={[MockFunction]}
/>
`;

exports[`InfoNumber matches snapshot 1`] = `
<p
  className="infoNumber regular"
>
  some text
</p>
`;

exports[`Title matches snapshot 1`] = `
<p
  className="title"
>
  some text
</p>
`;
